# titans-memory

./: .gitignore  GETTING_STARTED.md  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
examples/: 01_quickstart.py  02_training_loop.py  03_memory_standalone.py
scripts/: convert_weights.py
tests/: test_hf.py  test_memory.py  test_models.py  test_scan.py  test_speed.py
titans/: __init__.py
titans/memory/: __init__.py  neural_memory.py  persistent_memory.py
titans/models/: __init__.py  lmm.py  mac.py  mag.py  mal.py
titans/ops/: __init__.py  attention.py  scan.py
titans/utils/: __init__.py  config.py  factory.py  hf.py  training.py
